--- a/custom_portal.css
+++ b/custom_portal.css
@@ -3,238 +3,348 @@
  This file contain extra CSS rules to customize the YunoHost user portal and
  can be used to customize app tiles, buttons, etc...
 ===============================================================================
-Modified by Sangokuss, 04/2019.
 */
 
+/* Make page texts white */
+.user-container h2,
+.user-container small,
+.user-container .user-mail,
+.user-container .user-mail,
+.content .footer a,
+a.app-tile,
+#ynh-logout {
+  color: rgb(170,170,170) !important;
+}
+
+#ynh-logout.icon {
+  background-color: rgb(230, 230, 230);
+    border: rgb(255, 255, 255) 3px solid;
+    border-radius: 0px 50px 0px 50px;
+    box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+                -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+                inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+                inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+                -webkit-transition: all 0.5s ease;
+}
+
+#ynh-logout.icon:hover {
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 0px 50px 0px;
+  box-shadow: 10px 10px 20px 5px rgba(119, 119, 119, 0.3),
+              -10px -10px 20px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              inset -10px -10px 20px 5px rgba(255, 255, 255, 0.8);
+              -webkit-transition: all 0.5s ease;
+}
+
+#ynh-logout.icon:active {
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 5px 5px 15px 5px rgba(119, 119, 119, 0.3),
+              -5px -5px 15px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 15px 5px rgba(119, 119, 119, 0.3),
+              inset -5px -5px 15px 5px rgba(255, 255, 255, 0.8);
+              -webkit-transition: all 0.5s ease;
+}
+
 body {
-   background-image: url("./fond.jpg");
+  color: white !important;
+  text-shadow: 3px 4px 4px rgba(0,0,0,.4), -1px -1px 6px rgba(0,0,0,0.2);
 }
 
-#ynh-logo {
-  background-image : url("./Falcon.png");
+.ynh-user-portal {
+  background-color: rgb(230, 230, 230) !important;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
-.login-form .form-group {
-  border: 1px solid #bbb;
+/* Apps colors */
+.app-tile {
+  background-color: rgb(230, 230, 230) !important;
+  border-radius: 50px 0px 50px 0px;
 }
 
-.user-container,
-.user-menu a,
-.link-btn,
-.footer a {
-   color: #fff;
+.app-tile:hover {
+  background-color: rgb(230, 230, 230) !important;
+  border-radius: 0px 50px 0px 50px;
 }
 
-.user-menu a:hover,
-.footer a:hover {
-   color: #whitegrey;
+.app-tile:active {
+  background-color: rgb(230, 230, 230) !important;
+  border-radius: 50px 50px 50px 50px;
 }
 
-.form-text:disabled:hover {
-   background: #797b83;
+.app-tile:hover:after,
+.app-tile:focus:after,
+.app-tile:hover:before,
+.app-tile:focus:before {
+    background: rgb(230, 230, 230) !important;
 }
 
-.link-btn,
-.link-btn:hover {
-   background: none;
+.listing-apps li {
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 0px 50px 0px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+              -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+              -webkit-transition: all 0.5s ease;
 }
 
-.listing-apps a:hover, .listing-apps a:focus {
-    left: -10px;
-    top: -10px;
-    box-shadow: none;
-    opacity: 0.9;
+.listing-apps li:hover,
+.listing-apps li:focus {
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 0px 50px 0px 50px;
+  box-shadow: 10px 10px 20px 5px rgba(119, 119, 119, 0.3),
+              -10px -10px 20px 5px rgba(255, 255, 255, 0.8);
+              -webkit-transition: all 0.5s ease;
 }
+
+.listing-apps li:active {
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 10px 10px 20px 5px rgba(119, 119, 119, 0.3),
+              -10px -10px 20px 5px rgba(255, 255, 255, 0.8);
+              -webkit-transition: all 0.5s ease;
+}
+
 
 .listing-apps a {
-    display: block;
-    position: relative;
-    padding: 0.2em;
-    top: 0;
-    left: 0;
-    width: 2.7em;
-    height: 2.7em;
-    background: #666;
-    color: yellow;
-    font-size: 4em;
-    transition: all 0.3s ease;
-    -webkit-transition: all 0.3s ease;
-    opacity: 0.7;
+  box-shadow: inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+  inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
 }
 
-.bluebg {
-    background: black !important;
-}
-.bluebg:hover:after,
-.bluebg:focus:after,
-.bluebg:hover:before,
-.bluebg:focus:before {
-    background: black !important;
+.listing-apps a:after,
+.listing-apps a::before {
+  content: none;
 }
 
-.purplebg {
-    background: black !important;
-}
-.purplebg:hover:after,
-.purplebg:focus:after,
-.purplebg:hover:before,
-.purplebg:focus:before {
-    background: black !important;
+.listing-apps a:hover,
+.listing-apps a:focus {
+  left: 0px;
+  top: 0px;
+  box-shadow: inset 5px 5px 10px 5px rgba(119, 119, 119, 0.3),
+  inset -10px -10px 20px 5px rgba(255, 255, 255, 0.8);
 }
 
-.redbg {
-    background: black !important;
-}
-.redbg:hover:after,
-.redbg:focus:after,
-.redbg:hover:before,
-.redbg:focus:before {
-    background: black !important;
+/* Use a custom logo image */
+#ynh-logo {
+  z-index: 10;
+  color:rgb(80, 80, 80);
 }
 
-.orangebg {
-    background: black !important;
-}
-.orangebg:hover:after,
-.orangebg:focus:after,
-.orangebg:hover:before,
-.orangebg:focus:before {
-    background: black !important;
+/* Round the form */
+.login-form label:before {
+	border-top-left-radius: 5em ;
+	border-bottom-left-radius: 5em ;
+  border-radius: 50px 0px 0px 50px;
 }
 
-.greenbg {
-    background: black !important;
-}
-.greenbg:hover:after,
-.greenbg:focus:after,
-.greenbg:hover:before,
-.greenbg:focus:before {
-    background: black !important;
+.login-form * {
+  border-radius: 50px 50px 50px 50px;
+  gap: 10px;
 }
 
-.darkbluebg {
-    background: black !important;
-}
-.darkbluebg:hover:after,
-.darkbluebg:focus:after,
-.darkbluebg:hover:before,
-.darkbluebg:focus:before {
-    background: black !important;
-}
-
-.lightbluebg {
-    background: black !important;
-}
-.lightbluebg:hover:after,
-.lightbluebg:focus:after,
-.lightbluebg:hover:before,
-.lightbluebg:focus:before {
-    background: black !important;
+.login-form input[type="text"],
+.login-form input[type="password"],
+.form-group input[type="email"],
+.form-group input[type="text"] {
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 10px 10px 20px 5px rgba(119, 119, 119, 0.3),
+              -10px -10px 20px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
 }
 
-.yellowbg {
-    background: black !important;
-}
-.yellowbg:hover:after,
-.yellowbg:focus:after,
-.yellowbg:hover:before,
-.yellowbg:focus:before {
-    background: black !important;
-}
-
-
-.lightpinkbg {
-    background: black !important;
-}
-.lightpinkbg:hover:after,
-.lightpinkbg:focus:after,
-.lightpinkbg:hover:before,
-.lightpinkbg:focus:before {
-    background: black !important;
+.login-form input[type="text"]:hover,
+.login-form input[type="password"]:hover,
+.form-group input[type="email"]:hover,
+.form-group input[type="text"]:hover {
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 10px 10px 15px 5px rgba(119, 119, 119, 0.3),
+              -10px -10px 15px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 15px 5px rgba(119, 119, 119, 0.3),
+              inset -10px -10px 15px 5px rgba(255, 255, 255, 0.8);
 }
 
-/* Following colors are not used yet */
-
-.pinkbg {
-    background: black !important;
-}
-.pinkbg:hover:after,
-.pinkbg:focus:after,
-.pinkbg:hover:before,
-.pinkbg:focus:before {
-    background: black !important;
-}
-
-.turquoisebg {
-    background: black !important;
-}
-.turquoisebg:hover:after,
-.turquoisebg:focus:after,
-.turquoisebg:hover:before,
-.turquoisebg:focus:before {
-    background: black !important;
-}
-.lightyellow {
-    background: black !important;
-}
-.lightyellow:hover:after,
-.lightyellow:focus:after,
-.lightyellow:hover:before,
-.lightyellow:focus:before {
-    background: black!important;
-}
-.lightgreen {
-    background: black !important;
-}
-.lightgreen:hover:after,
-.lightgreen:focus:after,
-.lightgreen:hover:before,
-.lightgreen:focus:before {
-    background: black !important;
-}
-.purpledarkbg {
-    background: black !important;
-}
-.purpledarkbg:hover:after,
-.purpledarkbg:focus:after,
-.purpledarkbg:hover:before,
-.purpledarkbg:focus:before {
-    background: black !important;
+.login-form input[type="text"]:active,
+.login-form input[type="password"]:active,
+.form-group input[type="email"]:active,
+.form-group input[type="text"]:active {
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              -5px -5px 20px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              inset -5px -5px 20px 5px rgba(255, 255, 255, 0.8);
 }
 
-/* Personnalisation des blocs d'information de la page de connexion */
+.login-form input[type="text"]:focus,
+.login-form input[type="password"]:focus,
+.form-group input[type="email"]:focus,
+.form-group input[type="text"]:focus {
+  outline: none;
+}
 
-.messages.info {
-    background: #000000;
-    opacity: 0.7;
+.form-group .control-label {
+  margin-bottom: 20px;
+  background-color: rgb(230, 230, 230);
+  color: rgb(80, 80, 80);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 0px 50px 0px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+              -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
+}
+
+.form-group .control-label:hover {
+  margin-bottom: 20px;
+  background-color: rgb(230, 230, 230);
+  color: rgb(80, 80, 80);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 0px 50px 0px 50px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+              -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
+}
+
+.form-group .control-label:active {
+  margin-bottom: 20px;
+  background-color: rgb(230, 230, 230);
+  color: rgb(80, 80, 80);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+              -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
+}
+
+/* Make form black */
+
+.login-form label::before {
+	background: rgb(255, 255, 255); 
+	color: rgb(80, 80, 80);
+  opacity: 0.5;
+}
+
+.login-form .form-group * {
+	background: rgb(255, 255, 255); 
+	color: rgb(0, 0, 0);
+}
+
+.form-text {
+  background-color: white;
+  margin-bottom: 10px;
+}
+
+.icon {
+	background: rgb(0, 0, 0);
 }
 
 .messages {
-    color: yellow;
-    margin-bottom: 1em;
-    text-align: center;
-    max-width: 21em;
-    margin: 2% auto 1em auto;
-    padding: 1.5em;
+	border-radius: .5em;
 }
 
-.classic-btn:hover, .classic-btn:focus {
-    background: black;
+.messages.info {
+  margin-bottom: 20px;
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 0px 50px 0px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+              -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
 }
 
-.classic-btn {
-    background: black;
-    opacity: 0.7;
+.messages.info:hover {
+  margin-bottom: 20px;
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 0px 50px 0px 50px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+              -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
 }
 
-.btn {
-    background: black;
-    display: inline-block;
-    padding: 0.5em 1em;
-    line-height: normal;
-    text-decoration: none;
-    color: yellow;
-    cursor: pointer;
-    transition: all 0.1s ease;
-    -webkit-transition: all 0.1s ease;
+.messages.info:active {
+  margin-bottom: 20px;
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+              -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+              inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+              inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
+}
+
+.login-form input[type="submit"] {
+  margin-bottom: 20px;
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 0px 50px 0px 50px;
+  box-shadow: 
+  15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+  -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+  inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+  inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
+}
+
+.login-form input[type="submit"]:hover {
+  margin-bottom: 20px;
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 0px 50px 0px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+  -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+  inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+  inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
+}
+
+.login-form input[type="submit"]:active {
+  margin-bottom: 20px;
+  background-color: rgb(230, 230, 230);
+  color: rgb(170,170,170);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+  -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+  inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+  inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.5s ease;
 }
