--- a/custom_portal.css
+++ b/custom_portal.css
@@ -5,7 +5,6 @@
 ===============================================================================
 */
 
-/* Make page texts white */
 .user-container h2,
 .user-container small,
 .user-container .user-mail,
@@ -244,7 +243,7 @@ body {
   -webkit-transition: all 0.5s ease;
 }
 
-/* Make form black */
+/* Make form animated */
 
 .login-form label::before {
 	background: rgb(255, 255, 255); 
