--- a/custom_portal.css
+++ b/custom_portal.css
@@ -139,8 +139,13 @@ body {
 
 /* Use a custom logo image */
 #ynh-logo {
-  z-index: 10;
-  color:rgb(80, 80, 80);
+    background-image: url("pixdev.png");
+    z-index: 10;
+    color:rgb(80, 80, 80);
+}
+
+#ynh-overlay-switch {
+    background-image : url("./pixdev.png");
 }
 
 /* Round the form */
